feat: 后端提供MCP服务

--- a/aippt_backend/pyproject.toml
+++ b/aippt_backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.25",
     "langchain-core>=0.3.59",
     "langchain-openai>=0.3.16",
+    "mcp>=1.10.1",
     "pydantic>=2.11.4",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.2",
